# TianGong-AI-vLLM

./: .gitignore  HY-MT1.5-7B-FP8.json  LICENSE  README.md  codex-vllm-proxy.config.json  ecosystem.config.json  gpt-oss-120b.config.json  gpt-oss-120b.config2.json  gpt-oss-120b.config3.json  hy-mt1.5-1.8b.json  hy-mt15-7b-fp8.json  lca-qwen3-embedding-0.6b.config.json  lca-qwen3-embedding-0.6b.parallele.config.json  mininax-m2.1.config.json  mininax-m2.1.parallele.config.json  mininax-m2.5.config.json  pyproject.toml  qwen-2.5vl-72b.config.json  qwen-3-embedding-0.6b.config.json  qwen-3.5-122b-a10b-fp8-size2.config.json  qwen-3.5-122b-a10b-fp8-size4.config.json  qwen-3.5-397b-a17b-int4-size4.config.json  qwen-3vl-30b.config.json  qwen-3vl-30b.config3.json  qwen-3vl-30b.confin2.json  qwen-3vl-32b-gguf.config.json  qwen-3vl-32b.config.json  requirements.txt  tiangonglca-embedding-0.6b.config.json
scripts/: codex_vllm_proxy.py
tests/: test_codex_vllm_proxy.py
