[project]
name = "tiangong-ai-vllm-serve"
version = "0.1.0"
description = "vLLM serving utilities and configs for TianGong models."
requires-python = ">=3.12"
dependencies = [
	"vllm>=0.12.0",
	"modelscope>=1.32.0",
]

[project.optional-dependencies]
dev = ["black>=24.0.0"]

[tool.uv.pip]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
extra-index-url = ["https://pypi.org/simple"]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.black]
line-length = 100
exclude = '''
(
	^/\.venv/
	| ^/weaviate/weaviate_data/
)
'''
